# st-pydantic

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.py
.github/: CODEOWNERS  release-drafter.yml
.github/workflows/: build-pipeline.yml  release-pipeline.yml
docs/: README.md  st_pydantic.settings.md  st_pydantic.ui_renderer.md  streamlit_pydantic.settings.md  streamlit_pydantic.types.md  streamlit_pydantic.ui_renderer.md
examples/: complex_defaults.py  complex_disabled_showcase.py  complex_instance_model.py  complex_nested_model.py  complex_showcase.py  custom_form.py  data_validation.py  dataclass_form.py  multiple_forms.py  optional_fields.py  overwrite_streamlit_args.py  render_input.py  render_output.py  simple_form.py  streamlit_settings.py  union_field.py  union_field_discriminator.py
playground/: playground_app.py
src/st_pydantic/: ui_renderer.py
